objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Contact_Number__c</fullName>
        <label>Account Contact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Flow__c</fullName>
        <label>Account Flow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Task_Description__c</fullName>
        <description>Testing the field not in the package.xml error issue</description>
        <inlineHelpText>Testing the field not in the package.xml error issue
heloo how are your...</inlineHelpText>
        <label>Account Task Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Translation__c</fullName>
        <description>Account translation testing for the field not in package.xml error</description>
        <inlineHelpText>It is used for the account translation testing feature
Account translation testing for the field not in package.xml error</inlineHelpText>
        <label>Account Translation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCH_rule_field__c</fullName>
        <description>To test compliance rule issue along with the profile commit testing story</description>
        <label>CCH rule field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCH_rule_field__c</fullName>
        <description>To test compliance rule issue along with the profile commit testing story</description>
        <label>CCH rule field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Admin_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Admin License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_a_New_Translated_Account__c</fullName>
        <label>Create a New Translated Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copado_Release_Version__c</fullName>
        <label>Copado Release Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_Test_Field__c</fullName>
        <label>HAP Test Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_Promo_Test_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forward Promo Test 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forward_Promo_Test1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forward Promo Test1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Copado_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Copado User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_package_XML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>testing for the field not in package.xml error</description>
        <label>Test package XML?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>